# Glowworm

./: .gitignore  CMakeLists.txt  CMakeLists.txt.b  CMakePresets.json  DOC.md  LICENSE  README.md  Resource.qrc  build.sh
Content/: Glowworm.desktop
Content/AppData/Client/: SavedConnections.json
Content/AppData/Client/UnfinishedDownloads/: name.json
Content/AppData/Server/: hostKey.txt
cmake/: add_resources.cmake  create_functional_tests.cmake  create_libraries.cmake  create_qml_modules.cmake  create_tests.cmake  create_unit_tests.cmake  toolchain.cmake
include/: constants.hpp
include/application/: app.h  app.hpp  initialize.h  initialize.hpp  log.h  log.hpp
include/connectors/: guiclientconnector.h  guihttpclientconnector.h  guihttpclientcoonnector.h  guihttpserverconnector.h
include/json/: jsonhelperfunctions.h
include/managers/: additional.h  client.h  clientsavedconnectionmanager.h  connectioninfo.h  constants.hpp  downloadinfo.h  initialize.h  log.h  savedconnectionmanager.h  serversavedconnectionmanager.h  unfinisheddownloadmanager.h
include/managers/client/: client.h  client.hpp  client_connection_manager.hpp  clientconnectionmanager.h  clientconnectionmanager.hpp  connection_info.hpp  connectioninfo.h  connectioninfo.hpp  directory_manager.hpp  download_info.hpp  download_manager.hpp  downloadinfo.h  downloadinfo.hpp  downloadmanager.h  downloadmanager.hpp  file_info.hpp
include/managers/server/: server.hpp  serverconnectionmanager.h
include/network/: httpclient.h  httpserver.h
include/network/client/: baseclient.h  client_http_messenger.hpp  client_messenger.hpp  client_tcp_tls_transport.hpp  client_tcp_transport.hpp  client_transport.hpp  client_webdav.hpp  client_webdav_protocol.hpp  client_websocket_messenger.hpp  directclient.h  httpclient.h  localclient.cpp  localclient.h  webdav_dir_parser.hpp  webdav_item.hpp
include/network/server/: file_sender.hpp  server_http_messenger.hpp  server_messenger.hpp  server_tcp_tls_transport.hpp  server_tcp_transport.hpp  server_transport.hpp  server_websocket_messenger.hpp
include/utils/: client_utils.hpp  json_utils.hpp  manager_utils.hpp  message_socket.hpp  server_utils.hpp  ssl_cert.hpp
qml/: Main.qml
qml/buttons/: BurgerButton.qml  CMakeLists.txt  CustomButton.qml
qml/mainPage/: Area.qml  BurgerMenu.qml  CustomImage.qml  CustomProgressBar.qml  CustomToolTip.qml  DownloadMenu.qml  DownloadStatusPanel.qml  FileBrowser.qml  FileInfoPanel.qml  FileManagement.qml  FileSystemBrowser.qml  Footer.qml  Functions.qml  Header.qml  MainPage.qml
qml/popups/: AddPopup.qml  AdvancedAddMenu.qml  CustomTabBar.qml  CustomTabButton.qml  DiskAddMenu.qml  QuickAddMenu.qml  QuickKeyGenPopup.qml  StartAddPopup.qml
qml/settingsPage/: SettingArea.qml  SettingsPage.qml
qml/utils/: Colors.qml
src/: main.cpp
src/application/: app.cpp  initialize.cpp  log.cpp
src/connectors/: guiclientconnector.cpp  guihttpclientconnector.cpp  guihttpclientcoonnector.cpp  guihttpserverconnector.cpp
src/json/: jsonhelperfunctions.cpp
src/managers/: client.cpp  clientsavedconnectionmanager.cpp  connectioninfo.cpp  downloadinfo.cpp  initialize.cpp  savedconnectionmanager.cpp  serversavedconnectionmanager.cpp  unfinisheddownloadmanager.cpp
src/managers/client/: client.cpp  client_connection_manager.cpp  clientconnectionmanager.cpp  connection_info.cpp  directory_manager.cpp  download_info.cpp  download_manager.cpp  downloadinfo.cpp  downloadmanager.cpp  file_info.cpp
src/managers/server/: server.cpp  serverconnectionmanager.cpp
src/network/: connectioninfo.cpp  downloadinfo.cpp  httpclient.cpp  httpserver.cpp
src/network/client/: client_http_messenger.cpp  client_tcp_tls_transport.cpp  client_tcp_transport.cpp  client_tls_transport.cpp  client_webdav.cpp  client_webdav_protocol.cpp  client_websocket_messenger.cpp  directclient.cpp  httpclient.cpp  webdav_dir_parser.cpp  webdav_item.cpp
src/network/server/: file_sender.cpp  httpserver.cpp  server_http_messenger.cpp  server_tcp_tls_transport.cpp  server_tcp_transport.cpp  server_websocket_messenger.cpp
src/utils/: client_utils.cpp  generateSslCert.cpp  json_utils.cpp  manager_utils.cpp  message_socket.cpp  server_utils.cpp  ssl_cert.cpp
tests/: client_connection_manager.cpp  connection_info.cpp  saved_connection_data.hpp
tests/functional/: client_data.hpp  client_server_messeging.cpp  main.cpp
tests/unit/: client_connection_manager.cpp  clientconnectionmanager.cpp  connection_info.cpp  connectioninfo.cpp  download_info.cpp  download_manager.cpp  downloadinfo.cpp  downloadmanager.cpp  main.cpp  saved_connection_data.hpp  savedconnectiondata.hpp  unfinished_download_data.hpp  unfinisheddownloaddata.hpp  unfinisheddownloadformatter.hpp
tests/unit/downloadinfo/: testdownloadinfo.cpp
